# tap-linear

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_linear/: __init__.py  client.py  streams.py  tap.py  utils.py
tests/: test_core.py  test_utils.py
