[tool.poetry]
name = "leukeleu-tap-linear"
version = "0.1.0"
description = "`tap-linear` is a Singer tap for Linear, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Wouter de Vries <wdevries@leukeleu.nl>"]
repository = "https://github.com/leukeleu/tap-linear"
keywords = [
    "ELT",
    "Linear",
]
license = "Apache-2.0"
packages = [
    { include = "tap_linear" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.8.0"
singer-sdk = { version="^0.39.1" }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
singer-sdk = { version="^0.39.1", extras = ["testing"] }
requests-mock = "^1.11.0"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_linear"]
target-version = "py38"
unfixable = [
    "ERA001",  # commented out code
]


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_linear"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-linear = 'tap_linear.tap:TapLinear.cli'
